fixed mobile z-index bug. Nav menu now on top of all elements

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,6 +6,7 @@ nav {
     width: 100%;
     height: 3rem;
     border-bottom: solid black;
+    z-index: 2;
 }
 
 nav * {
